--- a/src/HUD/Players/observed.scss
+++ b/src/HUD/Players/observed.scss
@@ -94,8 +94,10 @@
                 height: 50px;
                 width: 110px;
                 position: absolute;
-                right: 5px;
-                margin-bottom: -5px;
+                right: 0;
+                display: flex;
+                justify-content: end;
+                align-items: end;
                 .ammo_counter {
                     flex: 1;
                     display: flex;
@@ -145,10 +147,26 @@
         display: flex;
         width: 100%;
         height: 100%;
-        justify-content: center;
-        align-items: flex-end;
         gap:0.1rem;
+        justify-content: space-evenly;
+        align-content: end;
+        align-items: end;
         z-index: 2;
+        .health-icon {
+            margin-right: 5px;
+        }
+        .health-div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+        }
+        .armor-div {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+        }
         .text {
             width: 30px;
             display: flex;
@@ -156,7 +174,6 @@
             justify-content: center;
             font-weight: 600;
             font-size: 26px;
-            height: 100%;
             padding-bottom: 10px;
         }
         .icon {
